--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@octokit/rest": "^20.0.0",
     "@octokit/webhooks": "^12.0.0",
+    "@octokit/auth-app": "^6.0.0",
     "express": "^4.18.0",
     "unified": "^11.0.0",
     "remark-parse": "^11.0.0",
@@ -21,7 +22,8 @@
     "unist-util-flatmap": "^1.0.0",
     "diff": "^5.1.0",
     "dotenv": "^16.0.0",
-    "zod": "^3.22.0"
+    "zod": "^3.22.0",
+    "mdast-util-to-string": "^4.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.0",
